<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Login.RegisterActivity">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        android:layout_marginTop="135dp"
        app:layout_constraintLeft_toLeftOf="@id/layout1"
        app:layout_constraintRight_toRightOf="@id/layout1"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_app_logo"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_register_name"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/login_ic_username"
            android:layout_gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/register_name"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            app:layout_constraintTop_toTopOf="@id/iv_login_name"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_name"
            app:layout_constraintLeft_toRightOf="@id/iv_login_name"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="请输入用户名"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintLeft_toLeftOf="@id/layout1"
        app:layout_constraintRight_toRightOf="@id/layout1">

        <ImageView
            android:id="@+id/iv_register_pwd"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="7dp"
            android:src="@drawable/login_ic_password"
            app:layout_constraintTop_toBottomOf="@id/iv_login_name"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            app:layout_constraintTop_toTopOf="@id/iv_login_pwd"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_pwd"
            app:layout_constraintLeft_toRightOf="@id/iv_login_pwd"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="请输入密码"
            android:textSize="16sp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        app:layout_constraintLeft_toLeftOf="@id/layout1"
        app:layout_constraintRight_toRightOf="@id/layout1">

        <ImageView
            android:id="@+id/iv_register_pwd2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="7dp"
            android:src="@drawable/login_ic_password"
            app:layout_constraintTop_toBottomOf="@id/iv_login_name"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/register_password2"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            app:layout_constraintTop_toTopOf="@id/iv_login_pwd"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_pwd"
            app:layout_constraintLeft_toRightOf="@id/iv_login_pwd"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="请再次确认密码"
            android:textSize="16sp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_confirm"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/style_btn_click"
        app:layout_constraintTop_toBottomOf="@id/layout3"
        app:layout_constraintLeft_toLeftOf="@id/layout1"
        app:layout_constraintRight_toRightOf="@id/layout1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="注册"/>

    <LinearLayout
        android:id="@+id/register_processBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_confirm"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:indeterminateBehavior="repeat"
            android:indeterminateDrawable="@drawable/base_loading_large_anim" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="center_vertical"
            android:text="注册中..."
            android:textSize="14sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>