...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PersonFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/appbar"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/Theme.BookTrace.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.BookTrace.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>
...
            app:layout_constraintLeft_toRightOf="@id/person_iv_avatar"
            android:textSize="15sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_cl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@id/layout_cl1"
        android:paddingVertical="12dp"
        android:background="@color/white"
...
            android:textSize="18sp"
            android:text="我的书馆"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/person_bt_person"
            android:layout_marginTop="20dp"
            android:layout_marginStart="36dp"
            android:onClick="onClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_part1_title"
            android:orientation="vertical">
...
